tests/benchmarks/samples/next/002_type_error_build_failure.txt
  ▲ Next.js 14.2.3

   Creating an optimized production build ...
Failed to compile.

./src/app/checkout/page.tsx:22:9
Type error: Argument of type 'string' is not assignable to parameter of type 'number'.

  20 |   const cart = useCart();
  21 |   const total = cart.total();
> 22 |   applyDiscount(total, "SAVE10");
     |         ^
  23 | }

> Build failed because of webpack errors
